[presentation] Few changes

--- a/presentation/content.tex
+++ b/presentation/content.tex
@@ -1832,20 +1832,19 @@ height=4em]
   \item The vertex detector plays a key role to fully exploit the
     physics potential at CLIC.
     \begin{itemize}
-    \item High spatial resolution (\textcolor{Blue}{$\sim3\,\micron$})
-      and low material content (\textcolor{Blue}{$\sim$2\%
-        X\textsubscript{0}}) $\Rightarrow$ achieve high
-      flavour-tagging performance
+    \item High spatial resolution: \textcolor{Blue}{$\sim3\,\micron$}
+    \item Low material content: \textcolor{Blue}{$\sim$2\%
+        X\textsubscript{0}} \\
+      $\Rightarrow$ achieve high flavour-tagging performance
     \end{itemize} 
     \item Characterisation of thin and active-edge planar silicon
       pixel sensors
       \begin{itemize}
       \item \textsc{Geant4} and TCAD simulations validated with
         test-beam data
-      \item Extrapolation to small pixels sizes using simulations
-      \item For thin sensors of $50\,\micron$, the configurations
-        without guard ring or with floating guard ring are the most
-        suitable designs.
+      \item Simulation studies of small pixel sizes
+      \item Most suitable solution of guard ring chosen for thin
+        sensors
       \end{itemize}
 
   \end{itemize}
